prevent horizontal overflow

--- a/web/src/scss/style.scss
+++ b/web/src/scss/style.scss
@@ -8,11 +8,11 @@
 
 @import "./components";
 
-canvas.gl {
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+
+html {
+  max-width: 100vw;
+  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 #svg {
@@ -67,7 +67,6 @@ body {
 }
 
 #grid {
-  // justify-content: space-evenly;
   gap: fluid(8, $sm);
   opacity: 0;
 
@@ -188,7 +187,7 @@ picture.fx {
     }
   }
 
-  > .df.jcb {
+  >.df.jcb {
     gap: fluid(8, $sm);
 
     @include md {
